2-DESPLIEGUE_APP_DOCKERIZADA/k8s-manifiestos/db.yaml
apiVersion: v1
kind: Namespace 
metadata:
  name: base-postgres
  labels:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: postgres
  name: postgres
  namespace: base-postgres  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes: 
      - name: pvc-vol
        persistentVolumeClaim:
          claimName: postgres-pvc     
      containers:
      - image: postgres:12.0-alpine
        name: postgres
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - name: pvc-vol
          mountPath: /var/lib/postgresql/data

      dnsPolicy: ClusterFirst
      restartPolicy: Always
    
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: postgres
  name: svc-postgres
  namespace: base-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: base-postgres
  name: allow-ingress-postgres
spec: 
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress: [] 
  ingress:
  - from: 
    - podSelector:
        matchLabels:
          run: back
      namespaceSelector:
        matchLabels:
          app: back

    ports:
    - protocol: TCP
      port: 5432
